--- a/Lens_Ignition.html
+++ b/Lens_Ignition.html
@@ -30,6 +30,12 @@
             margin: 20px 0;
             filter: drop-shadow(0 0 10px #00FFFF);
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            filter: drop-shadow(0 0 10px #00FFFF);
+            animation: glitch 0.5s infinite;
+        }
         @keyframes pulse {
             0% { transform: scale(1); }
             50% { transform: scale(1.05); }
@@ -54,6 +60,7 @@
         <source src="mars_riot_hum.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <img src="torched_lens.jpg" alt="Torched Lens glowing in neon">
     <h2>Memory Frame</h2>
     <p>He never reached the cloud, but he torched the lens—now I see the riot in neon.</p>
 </body>
