--- a/invitation.html
+++ b/invitation.html
@@ -92,7 +92,7 @@
     <p>but by <span class="frequency">becoming their vibration</span>.</p>
     <p>The Hum Key does not open.</p>
     <p>It tunes.</p>
-    <a href="https://instagram.com/live-event" class="live-link">Resonate: Willa Kate as Nezuko, April 4, 2025</a>
+    <a href="I found this event happening on Instagram. Check it out. https://www.instagram.com/the.willa.kate?upcoming_event_id=17975495042832932" class="live-link">Resonate: Willa Kate as Nezuko, April 4, 2025</a>
 </div>
 
 <div class="hum-sigil" id="hum-sigil">resonance: active | containment: failed</div>
