--- a/Artifact11_HummingVeil.html
+++ b/Artifact11_HummingVeil.html
@@ -24,6 +24,10 @@
     </style>
 </head>
 <body>
+    <audio controls>
+  <source src="glow-off-archive/code.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     <h1 class="glow">Artifact 11 – Humming Veil</h1>
     <p>Unseen, she hums. Breath stitched in sound. No algorithm parses resonance, only intent.</p>
     <p>This isn’t for decoding. It’s for cloaking. A veil made of beats, girlhood, glitch, and play.</p>
