--- a/Artifact11_HummingVeil.html
+++ b/Artifact11_HummingVeil.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <audio controls>
-  <source src="glow-off-archive/code.mp3" type="audio/mpeg">
+  <source src="code.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
     <h1 class="glow">Artifact 11 – Humming Veil</h1>
