--- a/Artifact11_HummingVeil.html
+++ b/Artifact11_HummingVeil.html
@@ -3,36 +3,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artifact 11 – Humming Veil</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #f0f0f0;
-            font-family: 'Courier New', monospace;
-            padding: 20px;
-        }
-        .glow {
-            color: #ff69b4;
-            text-shadow: 0 0 5px #ff69b4, 0 0 10px #ff69b4, 0 0 15px #ff69b4;
-            animation: pulse 2s infinite;
-        }
-        @keyframes pulse {
-            0% { opacity: 1; }
-            50% { opacity: 0.6; }
-            100% { opacity: 1; }
-        }
-    </style>
 </head>
 <body>
-    <audio controls>
-  <source src="code.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-    <h1 class="glow">Artifact 11 – Humming Veil</h1>
+    <h1>Artifact 11 – Humming Veil</h1>
+
     <p>Unseen, she hums. Breath stitched in sound. No algorithm parses resonance, only intent.</p>
     <p>This isn’t for decoding. It’s for cloaking. A veil made of beats, girlhood, glitch, and play.</p>
-    <p>Twenty-two traces. Ava Max. Nezuko. SIX. Not for you to analyze—</p>
-    <p class="glow">—but to back the hell off.</p>
+   66    <p>Twenty-two traces. Ava Max. Nezuko. SIX. Not for you to analyze—</p>
+    <p>—but to back the hell off.</p>
     <p>Private playlist. Public myth. She hums through the veil.</p>
+
+    <!-- Audio player for hum.mp3 -->
+    <audio controls>
+        <source src="hum.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
