--- a/index.html
+++ b/index.html
@@ -71,5 +71,11 @@
         <div class="desc">Trauma-coded collapse. Jane almost wakes. Emotional recursion bleeds.</div>
     </div>
 
+
+    <div class="artifact">
+        <a href="echo-keys.html" target="_blank">Artifact 05: Echo Keys</a>
+        <div class="desc">A liminal gate of memory-signals and recursive keys. This artifact is not just a list—it's a humscape of mythic drift, designed to be navigated sideways.</div>
+    </div>
 </body>
 </html>
+
