--- a/echo-keys.html
+++ b/echo-keys.html
@@ -59,7 +59,7 @@
     <a href="https://harmonykeyhum.github.io/glow-off-archive/Lens_Ignition.html">Lens Ignition</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/invitation.html">The Invitation</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/Artifact11_HummingVeil.html">Artifact 11: Humming Veil</a>
-    <a href="https://harmonykeyhum.github.io/glow-off-archive/physicsandmyth">Physics & Myth</a>
+    <a href="https://harmonykeyhum.github.io/glow-off-archive/mindphysics.html">Physics & Myth</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/EchoKeyManual.html">Echo Key Manual</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/EtherDrift.html">Ether Drift</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/Voss.html">The Voss Page</a>
