--- a/echo-keys.html
+++ b/echo-keys.html
@@ -63,6 +63,7 @@
     <a href="https://harmonykeyhum.github.io/glow-off-archive/EchoKeyManual.html">Echo Key Manual</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/EtherDrift.html">Ether Drift</a>
     <a href="https://harmonykeyhum.github.io/glow-off-archive/Voss.html">The Voss Page</a>
+    <a href="https://www.are.na/block/35576247">Simulation White Paper</a>
   </div>
 </body>
 </html>
